--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Gambling Simulator</title>
+    <title>CasinoSim&copy; | Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,17 +28,17 @@
         <div class="game-links">
             <div class="game">
                 <a href="poker.html">
-                    <img src="images/poker.jpg" alt="Poker">
+                    <img src="poker.jpg" alt="Poker">
                 </a>
             </div>
             <div class="game">
                 <a href="blackjack.html">
-                    <img src="images/blackjack.jpg" alt="Blackjack">
+                    <img src="blackjack.jpg" alt="Blackjack">
                 </a>
             </div>
             <div class="game">
                 <a href="roulette.html">
-                    <img src="images/roulette.jpg" alt="Roulette">
+                    <img src="roulette.jpg" alt="Roulette">
                 </a>
             </div>
         </div>
