--- a/blackjack.html
+++ b/blackjack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackjack</title>
+    <title>CasinoSim&copy; | Blackjack</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
